new version update

--- a/pages/blog/tuzla-organizasyon.mdx
+++ b/pages/blog/tuzla-organizasyon.mdx
@@ -1,9 +1,29 @@
 import BlogLayout from '../../components/layout/blog-layout'
 
 export const meta = {
-  author: 'Rich Haines'
+  author: 'Deniz Aksu'
 }
 
-# This is first blog post
+# Tuzla Mai Organizasyon
+
+Tuzla Mai Organizasyon
+
+Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+
+Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+
+Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+
+## Lorem ipsum laboris anim
+
+Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+
+Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+
+Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+
+Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+
+Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
 
 export default ({ children }) => <BlogLayout meta={meta}>{children}</BlogLayout>
