last config done

--- a/pages/blog/tuzla-organizasyon.mdx
+++ b/pages/blog/tuzla-organizasyon.mdx
@@ -6,24 +6,26 @@ export const meta = {
 
 # Tuzla Mai Organizasyon
 
-Tuzla Mai Organizasyon
+Tuzla'da Mai Organizasyon olarak Canan hanımın kontrolünde büyümekte olan bir organizasyon firmasıdır.
+Bir çok çiftin güzel günlerinde yanlarında bulunan ve bu günleri güzelleştiren Mai Organizasyon
+Tuzla'da da hizmet vermeye devam etmektedir. Tuzla'da düğün organizasyonu yapmak isteyenler için
+Tuzla'da düğün organizasyonu yapacak firmalar arasında yer alan Mai Organizasyon firması
+Tuzla'da düğün organizasyonu yapmak isteyen çiftlerin tercih ettiği firmalardan biridir.
 
-Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+## Hizmetlerimiz
 
-Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+- Tuzla Düğün Organizasyonu
+- Tuzla Nikah Organizasyonu
+- Tuzla Sünnet Organizasyonu
+- Tuzla Bebek Doğum Günü Organizasyonu
+- Tuzla Baby Shower Organizasyonu
 
-Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+## İletişim
 
-## Lorem ipsum laboris anim
-
-Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
-
-Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
-
-Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
-
-Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
-
-Lorem ipsum laboris anim. Adipisicing fugiat ex ad duis ex officia proident minim. Enim eu cupidatat magna ea ea cillum est velit aute voluptate. Cupidatat incididunt magna aliquip culpa esse mollit.
+- [ 0534 348 93 48 ](tel:05343489348)
+- [ info@maiorganizasyon.com ](mailto:info@maiorganizasyon.com)
+- [ www.maiorganizasyon.com ](https://www.maiorganizasyon.com)
+- [ @maiorganizasyon\_ ](https://www.instagram.com/maiorganizasyon_)
+- [address](https://goo.gl/maps/2EAuGpUeuDaV6sRXA)
 
 export default ({ children }) => <BlogLayout meta={meta}>{children}</BlogLayout>
