--- a/pages/blog/tuzla-organizasyon.mdx
+++ b/pages/blog/tuzla-organizasyon.mdx
@@ -1,7 +1,8 @@
 import BlogLayout from '../../components/layout/blog-layout'
 
 export const meta = {
-  author: 'Deniz Aksu'
+  author: 'Deniz Aksu',
+  title: 'Tuzla Düğün Organizasyonu'
 }
 
 # Tuzla Mai Organizasyon
